# RustFinalProject

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/array/: batch.rs  bitmap.rs  compute.rs  mod.rs  primitive.rs
src/datasource/: csv.rs  mod.rs
src/execution/: context.rs  driver.rs  mod.rs
src/logical/: binder.rs  display.rs  expr.rs  mod.rs  plan.rs
src/optimizer/: column_pruning.rs  constant_folding.rs  expr_simplify.rs  mod.rs  predicate_pushdown.rs  projection_pushdown.rs
src/physical/: expr.rs  key.rs  mod.rs  planner.rs
src/physical/operators/: filter.rs  hash_aggregate.rs  hash_join.rs  limit.rs  mod.rs  projection.rs  scan.rs  sort.rs
src/repl/: command.rs  format.rs  mod.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/types/: datatype.rs  date.rs  mod.rs  scalar.rs  schema.rs
testdata/: departments.csv  dept_float.csv  employees.csv  events.csv  nulls.csv
tests/: end_to_end.rs  optimizer.rs  parallel_consistency.rs
